--- a/spring-session/pom.xml
+++ b/spring-session/pom.xml
@@ -24,8 +24,8 @@
             <artifactId>spring-session-data-redis</artifactId>
         </dependency>
         <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-data-redis</artifactId>
+            <groupId>com.dingyabin</groupId>
+            <artifactId>redis-helper-starter</artifactId>
         </dependency>
         <dependency>
             <groupId>org.apache.commons</groupId>
