--- a/pom.xml
+++ b/pom.xml
@@ -44,6 +44,7 @@
         <module>spring-scheduler-demo</module>
         <module>common-utils</module>
         <module>captcha-demo</module>
+        <module>spring-rocket-demo</module>
     </modules>
 
 
